# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-01-30 02:06:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-14

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-14


    modified files:
     ChangeLog Python/Instances.hs Python/Interpreter.hs
     Python/Types.hs Python/Utils.hs testsrc/Interpretertest.hs


2005-01-30 01:35:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-13

    Summary:
      TESTS WORK
    Revision:
      missingexts--head--0.7--patch-13


    new files:
     testsrc/Interpretertest.hs

    removed files:
     testsrc/Bitstest.hs testsrc/Eithertest.hs
     testsrc/FiniteMaptest.hs testsrc/HVFStest.hs
     testsrc/HVIOtest.hs testsrc/IOtest.hs testsrc/Listtest.hs
     testsrc/Strtest.hs testsrc/Timetest.hs

    modified files:
     ChangeLog Makefile MissingPy.cabal Python/Interpreter.hs
     testsrc/Tests.hs testsrc/runtests.hs


2005-01-30 01:06:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-12

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-12


    modified files:
     ChangeLog Python/Instances.hs


2005-01-30 01:03:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-11

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-11


    modified files:
     ChangeLog Python/Instances.hs


2005-01-30 00:53:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-10

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-10


    modified files:
     ChangeLog Python/Instances.hs Python/Utils.hs
     {arch}/=tagging-method


2005-01-30 00:34:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-9

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-9


    modified files:
     ChangeLog MissingPy.cabal Python/Instances.hs Python/Types.hs

